# final-project-bigdata

./: .gitignore  README.md  pyproject.toml
nyc_opendata/: __init__.py  config.py  data_cleaning.py  data_ingestion.py  database.py  gold_layer.py  plots.ipynb  reset.py
tests/: test_cleaner.py  test_database.py  test_gold_layer.py  test_ingestion.py
